ABC-Rank rewards room: Add Lanino subheadings to ToC

--- a/locations/tvworld/greenroom/rewardsroom.html
+++ b/locations/tvworld/greenroom/rewardsroom.html
@@ -123,6 +123,13 @@ toc:
   -
     id: lanino
     name: Lanino
+    subheadings:
+      -
+        id: lanino1
+        name: Initial
+      -
+        id: lanino2
+        name: After reassuring Lanino
   -
     id: arankdoor
     name: Door to the Arcade
@@ -470,7 +477,7 @@ toc:
 	<h2>Lanino</h2>
 	<p>Present only after Round 1's Desert Board is completed.</p>
 
-	<h3>Initial</h3>
+	<h3 id="lanino1">Initial</h3>
 	<d-box theme="dark">
 		<d-speaker>Lanino</d-speaker>
 		<d-text asterisk>Oh, you three! It is I, Lanino. The Green Room was, BUSY, so I'm in here.</d-text>
@@ -556,7 +563,7 @@ toc:
 
 	<hr>
 
-	<h3>After reassuring Lanino</h3>
+	<h3 id="lanino2">After reassuring Lanino</h3>
 	<d-box theme="dark">
 		<d-speaker>Lanino</d-speaker>
 		<d-text asterisk>Thanks, Kris! You shone a little light on my life!</d-text>
