Make d-option-panels auto-expand on search
YOU CAN NOW SEARCH WITHIN THEM WITHOUT HAVING TO EXPAND THEM ALL FIRST LIKE <DETAILS>!!!! YES!!!!!!!!!!!!!!!!!

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ hide_title: true
 		{% endcomment %}
 		<li><span class="lightyellow">Dim colors</span>: Use slightly darker colors across the site, if the stark white-on-black strains your eyes.</li>
 		<li><span class="lightyellow">Animations</span>: Toggles animated images (replaced with static PNGs) and any text effects such as shaking text (replaced with italicized or otherwise statically-formatted text).</li>
-		<li><span class="lightyellow">Show all choices</span>: Displays results of all choices for easier searching.</li>
+		<li><span class="lightyellow">Show all choices</span>: Expands the results of all choices for easier reading.</li>
 	</ul>
 </section>
 
