Document TV World backstage area

--- a/locations/tvworld/index.html
+++ b/locations/tvworld/index.html
@@ -13,6 +13,15 @@ items:
     name: Green Room
     sublist:
       -
+        url: ""
+        name: Main area
+      -
+        url: starchangingroom
+        name: Star Changing Room{END_LINK} - S-Rank rewards room
+      -
+        url: backstage
+        name: Backstage area
+      -
         url: rewardsroom
         name: ABC-Rank rewards room
       -
