Generics: Add warp doors

--- a/misc/index.html
+++ b/misc/index.html
@@ -74,6 +74,10 @@ items:
             name: Treasure chests
             splitter: "#"
           -
+            url: warpdoor
+            name: Warp doors
+            splitter: "#"
+          -
             url: vendingmachine
             name: Vending machines
             splitter: "#"
