--- a/misc/generic.html
+++ b/misc/generic.html
@@ -17,6 +17,14 @@ sources:
     chapters: [1, 2, 3, 4]
     note: treasure chests
   -
+    name: gml_GlobalScript_scr_text
+    chapters: [1, 2, 3, 4]
+    note: warp doors (narration)
+  -
+    name: gml_Object_obj_shortcut_door_Step_0
+    chapters: [1, 2, 3, 4]
+    note: warp doors (selecting a location)
+  -
     name: gml_Object_obj_shop_vending_Create_0
     chapters: [3]
     note: vending machines
@@ -193,6 +201,49 @@ toc:
 	<p>For if the chest is somehow neither open nor closed.</p>
 	<d-box theme="dark">
 		<d-text asterisk>(It won't open.)</d-text>
+	</d-box>
+</section>
+
+<section class="d-section" id="warpdoor">
+	<h2>Warp doors</h2>
+	<p>The doors that let you fast-travel across the zones of each Dark World.</p>
+
+	<d-box theme="dark">
+		<d-text asterisk>(It's a door.)</d-text>
+		<d-text asterisk>(Where will you go?)</d-text>
+	</d-box>
+	<p>A choice menu is given with multiple locations, simulated below.</p>
+	<d-choices theme="dark">
+		<d-option index="0" text="Different#location"></d-option>
+		<d-option index="1" text="Current#location"></d-option>
+		<d-option index="2" text="Cancel" conditional></d-option>
+	</d-choices>
+	<d-option-panel index="0" theme="dark">
+		<d-box theme="dark">
+			<d-text asterisk>(The door opened...)</d-text>
+		</d-box>
+		<p class="note">The screen cuts to black with the sound of a door opening. After a moment, the scene fades in to the requested location, with the party standing outside the warp door present there.</p>
+	</d-option-panel>
+	<d-option-panel index="1" theme="dark">
+		<d-box theme="dark">
+			<d-text asterisk>(Amazingly, you are already there.)</d-text>
+		</d-box>
+		<p class="note">Nothing happens.</p>
+	</d-option-panel>
+	<d-option-panel index="2" theme="dark">
+		<p class="note">Available only from Chapter 2 onwards.</p>
+		<d-box theme="dark">
+			<d-text asterisk>(You doorn't.)</d-text>
+		</d-box>
+		<p class="note">Nothing happens.</p>
+	</d-option-panel>
+
+	<hr>
+
+	<h3>Unused fallback</h3>
+	<p>For choosing an option that's not accounted for by the code.</p>
+	<d-box theme="dark">
+		<d-text asterisk>(But nothing happened.)</d-text>
 	</d-box>
 </section>
 
