Star Changing Room: Note "return to initmenu" on vending "Check"

--- a/locations/tvworld/greenroom/starchangingroom.html
+++ b/locations/tvworld/greenroom/starchangingroom.html
@@ -596,6 +596,7 @@ toc:
 	<hr>
 
 	<h3 id="vendingmachine-check">Check</h3>
+	<p class="note">In all cases, after the dialogue/narration ends, you are returned to the <a href="#vendingmachine-initial">initial menu</a>.</p>
 	<h4>After Round 1</h4>
 	<d-box theme="dark">
 		<d-text asterisk>(There's graffiti here...)</d-text>
