Generics: Add note class to warp door note

--- a/misc/generic.html
+++ b/misc/generic.html
@@ -212,7 +212,7 @@ toc:
 		<d-text asterisk>(It's a door.)</d-text>
 		<d-text asterisk>(Where will you go?)</d-text>
 	</d-box>
-	<p>A choice menu is given with multiple locations, simulated below.</p>
+	<p class="note">A choice menu is given with multiple locations, simulated below.</p>
 	<d-choices theme="dark">
 		<d-option index="0" text="Different#location"></d-option>
 		<d-option index="1" text="Current#location"></d-option>
