Document TV World red carpet hall

--- a/locations/tvworld/index.html
+++ b/locations/tvworld/index.html
@@ -33,6 +33,9 @@ items:
       -
         url: cooler
         name: Cooler{END_LINK} - C-Rank rewards room
+      -
+        url: redcarpethall
+        name: Red carpet hall
   -
     id: other
     name: Other
