Weather encounter: Note looping under FT

--- a/encounters/weather.html
+++ b/encounters/weather.html
@@ -164,6 +164,7 @@ toc:
 
 	<h3 id="ft-turn">With specific turns</h3>
 	<h4>Turns 1 (looped) and 3</h4>
+	<p><a href="#turn3def">(See the page intro above for the expanded definition of "Turn 3".)</a></p>
 	<p class="note">"<span class="white">#</span>" is replaced by the number of I Love TVs said, in the range 0–6.</p>
 	<d-box theme="battlemenu">
 		<d-sprite speaker="Tenna" emotion="0"></d-sprite>
@@ -175,6 +176,7 @@ toc:
 		<d-sprite speaker="Tenna" emotion="0"></d-sprite>
 		<d-text asterisk>These two are a professional power couple!!! Nothing can stop the weather!!</d-text>
 	</d-box>
+	<p class="note">If the "I Love TV" counter remains at 0, then the fight loops back to Turn 1; this looping repeats a maximum of twice for a total of 6 normal turns, before the fight forcibly progresses to <a href="#turn3def">"Turn 3"</a>.</p>
 
 	<h4>Turn 4</h4>
 	<h5>If Elnina was favored</h5>
@@ -260,7 +262,7 @@ toc:
 			<d-text>... Drop.</d-text>
 		</d-box>
 	</div>
-	<p class="note">If the "I Love TV" counter remains at 0, then the fight loops back to Turn 1; this looping repeats a maximum of twice for a total of 6 normal turns, before the fight forcibly progresses to Turn 3.</p>
+	<p class="note">If the "I Love TV" counter remains at 0, then the fight loops back to Turn 1; this looping repeats a maximum of twice for a total of 6 normal turns, before the fight forcibly progresses to <a href="#turn3def">"Turn 3"</a>.</p>
 
 	<hr>
 
