Document TV World interstitial space

--- a/locations/tvworld/greenroom/index.html
+++ b/locations/tvworld/greenroom/index.html
@@ -71,6 +71,9 @@ see_also:
   -
     url: /locations/tvworld/greenroom/redcarpethall
     name: Red carpet hall
+  -
+    url: /locations/tvworld/greenroom/interstitial
+    name: Interstitial space
 
 toc:
   -
