--- a/locations/tvworld/index.html
+++ b/locations/tvworld/index.html
@@ -36,6 +36,9 @@ items:
       -
         url: redcarpethall
         name: Red carpet hall
+      -
+        url: interstitial
+        name: Interstitial space
   -
     id: other
     name: Other
