Rearrange TV World index

--- a/locations/tvworld/index.html
+++ b/locations/tvworld/index.html
@@ -16,29 +16,38 @@ items:
         url: ""
         name: Main area
       -
-        url: starchangingroom
-        name: Star Changing Room{END_LINK} - S-Rank rewards room
+        name: Rewards rooms
+        sublist:
+          -
+            name: Special rooms
+            sublist:
+              -
+                url: starchangingroom
+                name: Star Changing Room{END_LINK} - S-Rank rewards room
+          -
+            name: ABC-Rank
+            sublist:
+              -
+                url: rewardsroom
+                name: Rewards hub
+              -
+                url: arcade
+                name: Arcade{END_LINK} - A-Rank rewards room
+              -
+                url: ballmachine
+                name: Ball Machine{END_LINK} - B-Rank rewards room
+              -
+                url: cooler
+                name: Cooler{END_LINK} - C-Rank rewards room
       -
         url: backstage
         name: Backstage area
       -
-        url: rewardsroom
-        name: ABC-Rank rewards room
-      -
-        url: arcade
-        name: Arcade{END_LINK} - A-Rank rewards room
-      -
-        url: ballmachine
-        name: Ball Machine{END_LINK} - B-Rank rewards room
-      -
-        url: cooler
-        name: Cooler{END_LINK} - C-Rank rewards room
-      -
         url: redcarpethall
-        name: Red carpet hall
+        name: Red carpet hall{END_LINK} (to the south)
       -
         url: interstitial
-        name: Interstitial space
+        name: Interstitial space{END_LINK} (to the west)
   -
     id: other
     name: Other
