HTML guide: Adjust fonts for readability

--- a/contribute/htmlguide.html
+++ b/contribute/htmlguide.html
@@ -242,7 +242,10 @@ credits: >
 			padding: 0.2em 0.5em;
 			border: thin solid;
 		}
+		th { font-weight: normal }
+		td { font-family: var(--font-condensed) }
 		td:first-child { font-family: monospace }
+		ul { padding-inline-start: 3ch }
 	}
 	code {
 		border: thin solid rgb(from currentColor r g b / 0.3);
