Mention OpenDyslexic on home page

--- a/index.html
+++ b/index.html
@@ -28,11 +28,9 @@ hide_title: true
 	<p>Check the bottom right menu for extra features:</p>
 	<ul>
 		<li><span class="lightyellow">Compact mode</span>: Just the dialogue, no sprites, so you can focus on what's being said.</li>
-		{%- comment %}
-		<li><span class="lightyellow">Dyslexia-friendly mode</span>: Switches to the <a href="https://antijingoist.itch.io/opendyslexic">OpenDyslexic font</a> for easier reading.</li>
-		{% endcomment %}
 		<li><span class="lightyellow">Dim colors</span>: Use slightly darker colors across the site, if the stark white-on-black strains your eyes.</li>
 		<li><span class="lightyellow">Animations</span>: Toggles animated images (replaced with static PNGs) and any text effects such as shaking text (replaced with italicized or otherwise statically-formatted text).</li>
+		<li><span class="lightyellow">Dyslexia-friendly mode</span>: Uses the <a href="https://antijingoist.itch.io/opendyslexic">OpenDyslexic font</a> for easier reading.</li>
 		<li><span class="lightyellow">Show all choices</span>: Expands the results of all choices for easier reading.</li>
 	</ul>
 </section>
