Document Z-Rank changing room

--- a/locations/tvworld/greenroom/backstage.html
+++ b/locations/tvworld/greenroom/backstage.html
@@ -31,7 +31,7 @@ see_also:
     name: Star Changing Room{END_LINK} - S-Rank rewards room
   -
     url: /locations/tvworld/greenroom/zrankroom
-    name: Z-Rank rewards room
+    name: Z-Rank changing room
 ---
 <section class="d-section" id="console">
 	<h2>TV Time console</h2>
