--- a/locations/tvworld/index.html
+++ b/locations/tvworld/index.html
@@ -24,6 +24,9 @@ items:
               -
                 url: starchangingroom
                 name: Star Changing Room{END_LINK} - S-Rank rewards room
+              -
+                url: zrankroom
+                name: Z-Rank changing room
           -
             name: ABC-Rank
             sublist:
