--- a/encounters/hammerofjustice.html
+++ b/encounters/hammerofjustice.html
@@ -130,12 +130,12 @@ toc:
 		<d-text asterisk>It's one shell of a battle!</d-text>
 	</d-box>
 	<hr class="hr2">
-	<p>9.9% (10/101) chance when Susie's HP is higher than 80%:</p>
+	<p class="note">9.9% (10/101) chance when Susie's HP is higher than 80%:</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Susie rolls her head confidently.</d-text>
 	</d-box>
 	<hr class="hr2">
-	<p>9.9% (10/101) chance when Susie's HP is lower than 40%:</p>
+	<p class="note">9.9% (10/101) chance when Susie's HP is lower than 40%:</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Susie grits her teeth.</d-text>
 	</d-box>
