Document Dark Zone storyline

--- a/encounters/jackenstein.html
+++ b/encounters/jackenstein.html
@@ -450,6 +450,7 @@ toc:
 	<p class="note">The SOUL appears where Kris stands and glows a brilliant white, the light briefly flooding the screen. Instead of the next scripted attack, a blank 3×3 "maze" is presented, where the SOUL can approach the jack-o'-lantern directly.</p>
 	<p class="note">In the first use of this ACT, the jack-o'-lantern approaches the SOUL laughing, but its smile turns into a look of dismay upon grazing the SOUL, and it declares "YOUR TOO BRIGHT".</p>
 	<p class="note">The jack-o'-lantern flees from the SOUL, looking frightened and exclaiming garbled variations of "MAMMA MIA" upon being grazed. Each time the jack-o'-lantern is grazed, Jackenstein gains 1% <span class="yellow">Mercy</span>, up to a maximum of 35% <span class="yellow">Mercy</span> for the first two uses and 30% <span class="yellow">Mercy</span> for the third use.</p>
+	<p class="note">On the third use, once 30% <span class="yellow">Mercy</span> is gained for a total of 100% across all uses, the jack-o'-lantern freezes in the middle of the "maze". After a pause, it says "MAMMA MIA" extremely slowly, growing in size with the last word as the screen floods with white light, and <a href="{{ '/chapters/chapter4/darkzone#postfight' | relative_url }}">the encounter ends</a>.</p>
 
 	<hr>
 
@@ -485,7 +486,7 @@ toc:
 	</d-box>
 
 	<h4>Fourth time onwards</h4>
-	<p>Unused, as three uses of Unleash </p>
+	<p>Unused, as three uses of Unleash are sufficient to end the encounter.</p>
 	<d-box theme="battletalk">
 		<d-speaker>Jackenstein</d-speaker>
 		<d-text>NO!!! NOT THE<span class="break"></span> LAIGHT!!!</d-text>
