Prophecies: Remove "main" id in content

--- a/misc/prophecy.html
+++ b/misc/prophecy.html
@@ -24,7 +24,7 @@ toc:
     id: initial
     name: Introduction
   -
-    id: main
+    id: roaring
     name: The Roaring
   -
     id: heroes1
@@ -106,7 +106,7 @@ toc:
         id: legender-initial
         name: Introduction
       -
-        id: legender-main
+        id: legender-roaring
         name: The Roaring
       -
         id: legender-heroes
@@ -136,18 +136,18 @@ toc:
 	</d-box>
 </section>
 
-<section class="d-section" id="main">
+<section class="d-section" id="roaring">
 	<h2>The Roaring</h2>
 
-	<d-box theme="prophecy" id="main1">
+	<d-box theme="prophecy" id="roaring1">
 		<d-text>A WORLD BASKED IN PUREST LIGHT.</d-text>
 		<d-text>BENEATH IT, GREW ETERNAL NIGHT.</d-text>
 	</d-box>
-	<d-box theme="prophecy" id="main2">
+	<d-box theme="prophecy" id="roaring2">
 		<d-text>IF FOUNTAINS FREED, THE ROARING CRIES.</d-text>
 		<d-text>AND TITANS SHAPE FROM DARKENED EYES.</d-text>
 	</d-box>
-	<d-box theme="prophecy" id="main3">
+	<d-box theme="prophecy" id="roaring3">
 		<d-text>THE LIGHT AND DARK, BOTH BURNING DIRE.</d-text>
 		<d-text>A COUNTDOWN TO THE EARTH'S EXPIRE.</d-text>
 	</d-box>
@@ -412,7 +412,7 @@ toc:
 
 	<hr>
 
-	<h3 id="legender-main"><a href="#main">The Roaring</a></h3>
+	<h3 id="legender-roaring"><a href="#roaring">The Roaring</a></h3>
 	<d-box theme="prophecy">
 		<d-text>THE FOUNTAINS FREED,</d-text>
 		<d-text>THE ROARING CRIES.</d-text>
