Clean Party Dojo challenge pages
Change page titles to challenge names, remove erroneous speaker label, remove nonapplicable inventory full check for TM

--- a/encounters/cloverdojo.html
+++ b/encounters/cloverdojo.html
@@ -1,5 +1,5 @@
 ---
-title: Party Dojo - Clover encounter
+title: Party Dojo - Clover Rematch
 
 description: >
   <p>Flavor text and dialogue for Clover's challenge at the Party Dojo.</p>
@@ -384,7 +384,6 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	<hr class="hr2">
 	<h5>If the inventory is not full</h5>
 	<d-box theme="dark">
-		<d-speaker>Jigsaw Joe</d-speaker>
 		<d-text asterisk>(You received ClubsSandwich!)</d-text>
 	</d-box>
 	<p class="note">The ClubsSandwich is added to the inventory.</p>
