--- a/encounters/tasquemanagerdojo.html
+++ b/encounters/tasquemanagerdojo.html
@@ -1,5 +1,5 @@
 ---
-title: Party Dojo - Tasque Manager encounter
+title: Party Dojo - Tasque Manager Says
 
 description: >
   <p>Flavor text and dialogue for Tasque Manager's challenge at the Party Dojo.</p>
@@ -76,7 +76,7 @@ toc:
 	<h2>General flavor text</h2>
 	
 	<h3 id="encounter">Initial encounter</h3>
-	<p>As this encounter is scripted with dialogue only, the below flavor text is unused.</p>
+	<p>Unused, as this encounter is scripted with dialogue only.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Graze!</d-text>
 	</d-box>
@@ -153,24 +153,10 @@ toc:
 		<d-speaker>Jigsaw Joe</d-speaker>
 		<d-text asterisk>As promised, here is your reward!</d-text>
 	</d-box>
-	<hr class="hr2">
-	<h5>If the inventory is not full</h5>
 	<d-box theme="dark">
-		<d-speaker>Jigsaw Joe</d-speaker>
 		<d-text asterisk>(You received $250!)</d-text>
 	</d-box>
 	<p class="note">$250 is added to your total money.</p>
-	<hr class="hr3">
-	<h5>If the inventory is full</h5>
-	<d-box theme="dark">
-		<d-speaker>Jigsaw Joe</d-speaker>
-		<d-text asterisk>Boss! Your inventory is full!!</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-speaker>Jigsaw Joe</d-speaker>
-		<d-text asterisk>You'll just have to try again, boss!</d-text>
-	</d-box>
-	<hr class="hr2">
 
 	<h4>Subsequent times</h4>
 	<d-box theme="dark">
