--- a/encounters/weatherdojo.html
+++ b/encounters/weatherdojo.html
@@ -1,5 +1,5 @@
 ---
-title: Party Dojo - Lanino and Elnina encounter
+title: Party Dojo - Lanino&Elnina
 
 description: >
   <p>Flavor text and dialogue for Lanino and Elnina's challenge at the Party Dojo.</p>
@@ -562,7 +562,6 @@ toc:
 	<hr class="hr2">
 	<h5>If the inventory is not full</h5>
 	<d-box theme="dark">
-		<d-speaker>Jigsaw Joe</d-speaker>
 		<d-text asterisk>(You received ExecBuffet!)</d-text>
 	</d-box>
 	<p class="note">The <a href="{{ '/misc/darkitems#execbuffet' | relative_url }}">Exec Buffet</a> is added to your total money.</p>
