Document graze challenge 1 at Party Dojo

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -273,7 +273,10 @@ items:
       -
         name: Party Dojo
         sublist:
-          # Jigsaw Joe, Graze Challenge 1
+          # Jigsaw Joe
+          -
+            url: dojograze
+            name: Graze Challenge 1
           -
             url: cloverdojo
             name: Clover Rematch
