--- a/encounters/jigsawry.html
+++ b/encounters/jigsawry.html
@@ -20,6 +20,11 @@ sources:
 credits: >
   <p>Compiled by wovenstarlight.</p>
 
+see_also:
+  -
+    url: /encounters/dojograze
+    name: Party Dojo - Graze Challenge 1
+
 toc:
   -
     id: flavortext
