Document Jigsaw Joe encounter at Party Dojo

--- a/encounters/dojograze.html
+++ b/encounters/dojograze.html
@@ -31,6 +31,9 @@ credits: >
 
 see_also:
   -
+    url: /encounters/jigsawjoe
+    name: Party Dojo - Jigsaw Joe
+  -
     url: /encounters/jigsawry
     name: Regular Jigsawry encounters
 
