--- a/encounters/index.html
+++ b/encounters/index.html
@@ -273,7 +273,9 @@ items:
       -
         name: Party Dojo
         sublist:
-          # Jigsaw Joe
+          -
+            url: jigsawjoe
+            name: Jigsaw Joe
           -
             url: dojograze
             name: Graze Challenge 1
