--- a/encounters/jigsawry.html
+++ b/encounters/jigsawry.html
@@ -22,6 +22,9 @@ credits: >
 
 see_also:
   -
+    url: /encounters/jigsawjoe
+    name: Party Dojo - Jigsaw Joe
+  -
     url: /encounters/dojograze
     name: Party Dojo - Graze Challenge 1
 
