Misc index: Describe prophecy link better

--- a/misc/index.html
+++ b/misc/index.html
@@ -88,7 +88,7 @@ items:
     sublist:
       -
         url: prophecy
-        name: The Legend of Delta Rune
+        name: The Legend of Delta Rune{END_LINK} - original text of the Prophecy
       -
         url: unused
         name: UNUSED{END_LINK} - Text found in the game files
