Misc index: Expound upon generic/prophecy links

--- a/misc/index.html
+++ b/misc/index.html
@@ -63,7 +63,7 @@ items:
             name: Save points{END_LINK} - Narration accompanying save points
       -
         url: generic
-        name: Generic interactions
+        name: Generic interactions{END_LINK} shared across chapters
         sublist:
           -
             url: objectget
