Document Ch2 All Stars challenge

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -285,7 +285,9 @@ items:
           -
             url: tasquemanagerdojo
             name: Tasque Manager Says
-          # Ch2 All Stars
+          -
+            url: ch2allstars
+            name: Ch2 All Stars
           -
             url: weatherdojo
             name: Lanino&Elnina
