Weather (Dojo): Fix reward destination: inventory, not money

--- a/encounters/weatherdojo.html
+++ b/encounters/weatherdojo.html
@@ -564,7 +564,7 @@ toc:
 	<d-box theme="dark">
 		<d-text asterisk>(You received ExecBuffet!)</d-text>
 	</d-box>
-	<p class="note">The <a href="{{ '/misc/darkitems#execbuffet' | relative_url }}">Exec Buffet</a> is added to your total money.</p>
+	<p class="note">The <a href="{{ '/misc/darkitems#execbuffet' | relative_url }}">Exec Buffet</a> is added to your inventory.</p>
 	<hr class="hr3">
 	<h5>If the inventory is full</h5>
 	<d-box theme="dark">
