Document Werewire encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -89,7 +89,9 @@ items:
       -
         name: Cyber Field
         sublist:
-          # Werewire
+          -
+            url: werewire
+            name: Werewire
           -
             url: tasque
             name: Tasque
