Tasque encounter: Add "see also"

--- a/encounters/tasque.html
+++ b/encounters/tasque.html
@@ -20,6 +20,11 @@ sources:
 credits: >
   <p>Compiled by wovenstarlight.</p>
 
+see_also:
+  -
+    url: /encounters/ch2allstars
+    name: Ch2 All Stars (featuring Tasque)
+
 toc:
   -
     id: flavortext
