Document Werewerewire encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -141,7 +141,9 @@ items:
           -
             url: rouxlsch2
             name: Rouxls Kaard{END_LINK} (first encounter, house-capturing game)
-          # Werewerewire
+          -
+            url: werewerewire
+            name: Werewerewire
           -
             url: queen
             name: Queen (with Berdly)
