Document Swatchling encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -131,7 +131,9 @@ items:
       -
         name: Queen's Mansion
         sublist:
-          # Swatchling
+          -
+            url: swatchling
+            name: Swatchling
           -
             url: tasquemanager
             name: Tasque Manager
