Document GIGA Queen encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -149,7 +149,9 @@ items:
           -
             url: queen
             name: Queen (with Berdly)
-          # GIGA Queen
+          -
+            url: gigaqueen
+            name: GIGA Queen
           -
             url: pipis
             name: Pipis
