Encounters: Replace "prefight" with "start of fight"

--- a/encounters/balthizard.html
+++ b/encounters/balthizard.html
@@ -22,8 +22,8 @@ credits: >
 
 toc:
   -
-    id: prefight
-    name: Before the fight, when escorting Gerson
+    id: start
+    name: Start of fight, when escorting Gerson
   -
     id: flavortext
     name: General flavor text
@@ -107,8 +107,8 @@ Unused encounters with blank text:
 	- 168 (Organikk)
 {% endcomment %}
 
-<section class="d-section" id="prefight">
-	<h2>Before the fight, when escorting Gerson</h2>
+<section class="d-section" id="start">
+	<h2>Start of fight, when escorting Gerson</h2>
 	<p>Plays only while escorting Gerson to his study, during the dual-Balthizard encounter in the many-windowed hall.</p>
 
 	<p class="note">The encounter begins with the party on the left, two Balthizards on the right, and the old man Gerson standing at the bottom-center of the space between them, facing the party.</p>
