--- a/encounters/jigsawjoe.html
+++ b/encounters/jigsawjoe.html
@@ -48,8 +48,8 @@ toc:
     id: challengeinfo
     name: Challenge info
   -
-    id: prefight
-    name: Before the fight
+    id: start
+    name: Start of fight
   -
     id: flavortext
     name: General flavor text
@@ -113,8 +113,8 @@ toc:
 	</d-box>
 </section>
 
-<section class="d-section" id="prefight">
-	<h2>Before the fight</h2>
+<section class="d-section" id="start">
+	<h2>Start of fight</h2>
 
 	<d-box theme="battletalk">
 		<d-speaker>Jigsaw Joe</d-speaker>
