--- a/encounters/missmizzle.html
+++ b/encounters/missmizzle.html
@@ -26,8 +26,8 @@ credits: >
 
 toc:
   -
-    id: prefight
-    name: Before the fight
+    id: start
+    name: Start of fight
   -
     id: flavortext
     name: General flavor text
@@ -106,8 +106,8 @@ toc:
 ---
 {% comment %} encounterno = 183 {% endcomment %}
 
-<section class="d-section" id="prefight">
-	<h2>Before the fight</h2>
+<section class="d-section" id="start">
+	<h2>Start of fight</h2>
 
 	<d-box theme="battletalk">
 		<d-speaker>HolywaterCooler</d-speaker>
