--- a/encounters/rouxlsch3.html
+++ b/encounters/rouxlsch3.html
@@ -39,8 +39,8 @@ see_also:
 
 toc:
   -
-    id: prefight
-    name: Before the fight
+    id: start
+    name: Start of fight
   -
     id: flavortext
     name: General flavor text
@@ -82,7 +82,7 @@ toc:
 ---
 {% comment %} encounterno = 114 {% endcomment %}
 
-<section class="d-section" id="prefight">
+<section class="d-section" id="start">
 	<h2>Start of fight</h2>
 
 	<d-box theme="battlemenu">
