--- a/encounters/shadowmantleholder.html
+++ b/encounters/shadowmantleholder.html
@@ -26,8 +26,8 @@ toc:
     name: End of fight
 ---
 
-<section class="d-section" id="prefight">
-	<h2>Before the fight</h2>
+<section class="d-section" id="start">
+	<h2>Start of fight</h2>
 
 	<p class="note">HERO_SWORD walks into a pitch-black area. After a moment, a voice speaks:</p>
 
