--- a/encounters/weather.html
+++ b/encounters/weather.html
@@ -51,14 +51,14 @@ credits: >
 
 toc:
   -
-    id: prefight
-    name: Before the fight
+    id: start
+    name: Start of fight
     subheadings:
       -
-        id: prefight-initial
+        id: start-initial
         name: First attempt
       -
-        id: prefight-subsequent
+        id: start-subsequent
         name: Subsequent attempts
   -
     id: flavortext
@@ -97,10 +97,10 @@ toc:
 ---
 {% comment %} encounterno = 113 {% endcomment %}
 
-<section class="d-section" id="prefight">
-	<h2>Before the fight</h2>
+<section class="d-section" id="start">
+	<h2>Start of fight</h2>
 
-	<h3 id="prefight-initial">First attempt</h3>
+	<h3 id="start-initial">First attempt</h3>
 	<p class="note">The encounter begins with the party on the left and Lanino and Elnina on the right, as is typical. At the top of the screen is a counter starting at "<span class="red">00</span>", styled to resemble digital clock numbers. Tenna enters the encounter from the bottom of the screen.</p>
 
 	<d-box theme="battletalk">
@@ -129,7 +129,7 @@ toc:
 
 	<hr>
 
-	<h3 id="prefight-subsequent">Subsequent attempts</h3>
+	<h3 id="start-subsequent">Subsequent attempts</h3>
 	<p>If you died to Lanino and Elnina and had to fight them again.</p>
 	<p class="note">The encounter begins with the party on the left and Lanino and Elnina on the right, as is typical. At the top of the screen is a counter starting at "<span class="red">00</span>", styled to resemble digital clock numbers. Tenna enters the encounter from the bottom of the screen.</p>
 
