Mantle holder enc.: Add reattempt description

--- a/encounters/shadowmantleholder.html
+++ b/encounters/shadowmantleholder.html
@@ -19,8 +19,15 @@ credits: >
 
 toc:
   -
-    id: prefight
-    name: Before the fight
+    id: start
+    name: Start of fight
+    subheadings:
+      -
+        id: start-first
+        name: First attempt
+      -
+        id: start-subsequent
+        name: Subsequent attempts
   -
     id: end
     name: End of fight
@@ -29,6 +36,7 @@ toc:
 <section class="d-section" id="start">
 	<h2>Start of fight</h2>
 
+	<h3 id="start-first">First attempt</h3>
 	<p class="note">HERO_SWORD walks into a pitch-black area. After a moment, a voice speaks:</p>
 
 	<d-box theme="8bit">
@@ -94,6 +102,11 @@ toc:
 	<p class="note">The screen brightens to reveal a maze-like room with the Shadow Mantle Holder at its center. The Mantle holder laughs, and the battle begins.</p>
 
 	<p class="note">There is no flavor text or dialogue accompanying this battle.</p>
+
+	<hr>
+
+	<h3 id="start-subsequent">Subsequent attempts</h3>
+	<p class="note">HERO_SWORD walks into a pitch-black area, which brightens to reveal a maze-like room with the Shadow Mantle Holder at its center. The Mantle holder laughs, and the battle begins.</p>
 </section>
 
 <section class="d-section" id="end">
