Replace "standard" with "neutral" dialogue

--- a/encounters/ambyulance.html
+++ b/encounters/ambyulance.html
@@ -297,7 +297,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	<hr>
 
 	<h3 id="hospitality">Dialogue</h3>
-	<p>First time only; subsequent times use <a href="#dialogue-standard">standard dialogue</a>.</p>
+	<p>First time only; subsequent times use <a href="#dialogue-neutral">neutral dialogue</a>.</p>
 	<d-box theme="battletalk">
 		<d-speaker>Ambyu-Lance</d-speaker>
 		<d-text>This girl is so sweet...</d-text>
