--- a/encounters/missmizzle.html
+++ b/encounters/missmizzle.html
@@ -54,10 +54,10 @@ toc:
         name: Neutral
         subheadings:
           -
-            id: dialogue-standard-holywatercooler
+            id: dialogue-neutral-holywatercooler
             name: As HolywaterCooler
           -
-            id: dialogue-standard-missmizzle
+            id: dialogue-neutral-missmizzle
             name: As Miss Mizzle
       -
         id: dialogue-fight
@@ -191,7 +191,7 @@ toc:
 	<h2>General dialogue</h2>
 
 	<h3 id="dialogue-neutral">Neutral</h3>
-	<h4 id="dialogue-standard-holywatercooler">As HolywaterCooler</h4>
+	<h4 id="dialogue-neutral-holywatercooler">As HolywaterCooler</h4>
 	<p class="note">Forced on the first turn of the encounter (unless overridden by <a href="#dialogue-fight">dialogue for being attacked</a>), and joins the randomly-chosen pool on subsequent turns with a double chance of occurring:</p>
 	<d-box theme="battletalk">
 		<d-speaker>HolywaterCooler</d-speaker>
@@ -254,7 +254,7 @@ toc:
 		<d-text>Boobie</d-text>
 	</d-box>
 
-	<h4 id="dialogue-standard-missmizzle">As Miss Mizzle</h4>
+	<h4 id="dialogue-neutral-missmizzle">As Miss Mizzle</h4>
 	<d-box theme="battletalk">
 		<d-speaker>Miss Mizzle</d-speaker>
 		<d-text>Glory, glory.</d-text>
@@ -285,7 +285,7 @@ toc:
 	<hr>
 
 	<h3 id="dialogue-fight">When attacked as HolywaterCooler</h3>
-	<p>Overrides <a href="#dialogue-standard-holywatercooler">standard dialogue</a>.</p>
+	<p>Overrides <a href="#dialogue-neutral-holywatercooler">neutral dialogue</a>.</p>
 	<h4>First time</h4>
 	<d-box theme="battletalk">
 		<d-speaker>HolywaterCooler</d-speaker>
@@ -520,7 +520,7 @@ toc:
 	<hr>
 
 	<h3 id="flirt-dialogue">Dialogue</h3>
-	<p class="note">HolywaterCooler does not say anything (i.e. no <a href="#dialogue-standard-holywatercooler">standard dialogue</a>) before her turn when this ACT is used. (<a href="#dialogue-fight">Dialogue for being attacked</a> is not affected and will play regardless of ACT usage.)</p>
+	<p class="note">HolywaterCooler does not say anything (i.e. no <a href="#dialogue-neutral-holywatercooler">neutral dialogue</a>) before her turn when this ACT is used. (<a href="#dialogue-fight">Dialogue for being attacked</a> is not affected and will play regardless of ACT usage.)</p>
 </section>
 
 <section class="d-section" id="begformercy">
@@ -601,7 +601,7 @@ toc:
 	<hr>
 
 	<h3 id="begformercy-dialogue">Dialogue</h3>
-	<p class="note">HolywaterCooler does not say anything (i.e. no <a href="#dialogue-standard-holywatercooler">standard dialogue</a>) before her turn when this ACT is used. (<a href="#dialogue-fight">Dialogue for being attacked</a> is not affected and will play regardless of ACT usage.)</p>
+	<p class="note">HolywaterCooler does not say anything (i.e. no <a href="#dialogue-neutral-holywatercooler">neutral dialogue</a>) before her turn when this ACT is used. (<a href="#dialogue-fight">Dialogue for being attacked</a> is not affected and will play regardless of ACT usage.)</p>
 </section>
 
 <section class="d-section" id="chat">
@@ -743,7 +743,7 @@ toc:
 	<hr>
 
 	<h3 id="chat-dialogue">Dialogue</h3>
-	<p class="note">HolywaterCooler does not say anything (i.e. no <a href="#dialogue-standard-holywatercooler">standard dialogue</a>) before her turn when this ACT is used. (<a href="#dialogue-fight">Dialogue for being attacked</a> is not affected and will play regardless of ACT usage.)</p>
+	<p class="note">HolywaterCooler does not say anything (i.e. no <a href="#dialogue-neutral-holywatercooler">neutral dialogue</a>) before her turn when this ACT is used. (<a href="#dialogue-fight">Dialogue for being attacked</a> is not affected and will play regardless of ACT usage.)</p>
 </section>
 
 <section class="d-section" id="dazzle">
