Document Shuttah encounters
Had to split into separate pages for miniboss/regular enemy variants, due to different challenge pools and dialogue being used for each

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -186,7 +186,9 @@ items:
           -
             url: pippins
             name: Pippins
-          # Shuttah
+          -
+            url: shuttahislandboard
+            name: Shuttah{END_LINK} (miniboss)
       -
         name: Green Room
         sublist:
@@ -202,6 +204,9 @@ items:
       -
         name: TV World
         sublist:
+          -
+            url: shuttahtvworld
+            name: Shuttah{END_LINK} (regular enemy)
           # Tenna (first fight)
           -
             url: ribbick
