Document Bonus Round & first Tenna encounter
- Add quiz borders and pseudo-theme
- Remove SFX for "GAME OVER" funnytext
- Note stage directions/omissions for Shadowguy and Zapper's relevant ACTs/dialogue respectively

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -207,7 +207,9 @@ items:
           -
             url: shuttahtvworld
             name: Shuttah{END_LINK} (regular enemy)
-          # Tenna (first fight)
+          -
+            url: tennabonusround
+            name: Tenna{END_LINK} (first encounter, bonus round)
           -
             url: ribbick
             name: Ribbick
