--- a/encounters/shadowguy.html
+++ b/encounters/shadowguy.html
@@ -295,6 +295,7 @@ Unused encounters with blank text:
 
 	<h3 id="sharpshoot-dialogue">Dialogue</h3>
 	<p>Plays only during the encounter alongside Tenna, if Tenna was hit by any bullets.</p>
+	<p class="note">Tenna hunches over, clutching his nose as if in pain; Shadowguy turns to look at him, smile faded.</p>
 	<d-box theme="battletalk">
 		<d-speaker>Tenna</d-speaker>
 		<d-text>H-Hey!!!</d-text>
