--- a/encounters/zapper.html
+++ b/encounters/zapper.html
@@ -217,6 +217,7 @@ Unused encounters with blank text:
 	<h2>General dialogue</h2>
 
 	<h3 id="dialogue-neutral">Neutral</h3>
+	<p>(Used in all encounters except the Bonus Round encounter with Tenna, in which case Zapper remains silent.)</p>
 	<d-box theme="battletalk">
 		<d-speaker>Zapper</d-speaker>
 		<d-text>Hoofah<span class="break"></span> doofah.</d-text>
