Arcade: Change Cooking "Challenge" -> "Show"
Also edit poster transcription. Damn cursive I can't read that shit

--- a/locations/tvworld/greenroom/arcade.html
+++ b/locations/tvworld/greenroom/arcade.html
@@ -43,10 +43,10 @@ see_also:
 toc:
   -
     id: chefposter
-    name: Cooking Challenge poster
+    name: Cooking Show poster
   -
     id: chefdoor
-    name: Cooking Challenge door
+    name: Cooking Show door
   -
     id: bandposter
     name: Rock Video poster
@@ -95,8 +95,8 @@ toc:
         name: After playing for the first time
 ---
 <section class="d-section" id="chefposter">
-	<h2>Cooking Challenge poster</h2>
-	<p class="note">The poster shows Ralsei wearing a chef's hat under cursive text reading "Chefs".</p>
+	<h2>Cooking Show poster</h2>
+	<p class="note">The poster shows Ralsei wearing a chef's hat under cursive text reading "Chef.".</p>
 
 	<d-box theme="dark">
 		<d-text asterisk>(It's a poster for the COOKING CHALLENGE!)</d-text>
@@ -138,7 +138,7 @@ toc:
 </section>
 
 <section class="d-section" id="chefdoor">
-	<h2>Cooking Challenge door</h2>
+	<h2>Cooking Show door</h2>
 	<p class="note">The marquee above the door reads "<span class="fnt-tv">NOW PLAYING......COOKING SHOW</span>".</p>
 
 	<d-box theme="dark">
@@ -149,7 +149,7 @@ toc:
 		<d-option index="1" text="Quit"></d-option>
 	</d-choices>
 	<d-option-panel index="0" theme="dark">
-		<p class="note">The doors open with a thud, and the screen fades to black, then opens to the Cooking Challenge game.</p>
+		<p class="note">The doors open with a thud, and the screen fades to black, then opens to the Cooking Show game.</p>
 	</d-option-panel>
 	<d-option-panel index="1" theme="dark">
 		<p class="note">Dialogue ends.</p>
