Document T-Rank rewards room

--- a/locations/tvworld/index.html
+++ b/locations/tvworld/index.html
@@ -22,6 +22,9 @@ items:
             name: Special rooms
             sublist:
               -
+                url: trankroom
+                name: T-Rank rewards room
+              -
                 url: starchangingroom
                 name: Star Changing Room{END_LINK} - S-Rank rewards room
               -
