Document 2nd Tenna encounter, add disambig

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -219,7 +219,9 @@ items:
       -
         name: Cold Place
         sublist:
-          # Tenna{END_LINK} (second fight)
+          -
+            url: tennacoldplace
+            name: Tenna{END_LINK} (second encounter, final showdown)
           -
             url: knight
             name: Roaring Knight
